--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0",
+    "styled-components": "^6.1.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "eslint-config-next": "14.0.2"
   }
 }
