--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "framer-motion": "^10.16.5",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
     "react": "^18",
