--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^10.16.5",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
+    "next-auth": "^5.0.0-beta.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
