--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
+    "@ant-design/cssinjs": "^1.18.0-alpha.5",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/themes": "^2.0.1",
+    "antd": "^5.11.4",
     "framer-motion": "^10.16.5",
     "mongoose": "^8.0.0",
     "next": "14.0.2",
